--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,54 @@ select {
   }
 }
 
+/*** Grid ***/
+body {
+    padding: 20px;
+}
+.container {
+    display: flex;
+}
+
+#grid {
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 500px;
+    border: 1px solid #000200;
+    padding: 5px;
+
+}
+#grid div {
+    user-select: none;
+    aspect-ratio: 1/1;
+    background-color: #f0f0f050;
+    margin: 1px;
+}
+
+/* Controls */
+.controls {
+    width: 250px;
+    padding: 20px;
+    margin-right: 20px;
+}
+
+#slider {
+    width: 100%;;
+}
+
+.control {
+  margin-bottom: 20px;
+}
+
+.control label {
+  display: block;
+}
+
+button {
+  width: 100%;;
+}
+
+.active {
+  background-color: #00020030;
+}
